syntax = "proto3";

option go_package = "./grpc";

service PlayerInfo {
    rpc GetRecommendedPlayerByName(RecommendPlayerRequest) returns (RecommendPlayerResponse) {}
    rpc GetBestAttributesByPlayerID(AttributeRequest) returns (AttributeResponse) {}
    rpc GetSimilarPlayerList(GraphByPlayerAndAlgoRequest) returns (GraphByPlayerAndAlgoResponse) {}
}

message RecommendPlayerRequest {
    string name = 1;
}

message RecommendPlayerResponse {
    message RecommendPLayer {
        int64 id = 1;
        string name = 2;
    }
    
    repeated RecommendPLayer players = 1; 
}

message AttributeRequest {
    string id = 1;
}

message AttributeResponse {
    message Attribute {
        int64 index = 1;
        string name = 2;
    }

    repeated Attribute attributes = 1;
}


message GraphByPlayerAndAlgoRequest {
    string id = 1;
    string algorithm = 2;
}

message GraphByPlayerAndAlgoResponse {
    message SimilarPlayer {
        string index = 1;
        float similar = 2;
    }

    message Execution {
        string name = 1;
        float time = 2;
    }

    repeated SimilarPlayer similars = 1;
    repeated Execution procs = 2;
    string url = 3;
}